--- a/index.html
+++ b/index.html
@@ -30,26 +30,27 @@
 
       <ul>
         <li>
-          <a href="https://www.olivar.com.br/" target="_blank"
-            >Visite nosso site</a
-          >
+          <a href="" target="_blank">Visite nosso site</a>
         </li>
         <li>
           <a
-            href="https://l.instagram.com/?u=https%3A%2F%2Fwa.me%2Fmessage%2FQAZYM4GG2T7GP1&e=AT3yF6Px__TBbI_vTWkEYpgi3Sz1OZObLowHiin8wxBbsJ0aOyTYs8EGbUPW96jSquGXGuTINSkjzCsH1Z6PP-hUOo9QeAG6849UrdUbU3fulpQVyqpIuQ"
+            href="https://api.whatsapp.com/message/QAZYM4GG2T7GP1?autoload=1&app_absent=0"
             >Entre em contato com o SAC</a
           >
         </li>
         <li>
           <a
-            href="https://l.instagram.com/?u=https%3A%2F%2Fwa.me%2Fmessage%2FQAZYM4GG2T7GP1&e=AT3yF6Px__TBbI_vTWkEYpgi3Sz1OZObLowHiin8wxBbsJ0aOyTYs8EGbUPW96jSquGXGuTINSkjzCsH1Z6PP-hUOo9QeAG6849UrdUbU3fulpQVyqpIuQ"
+            href="https://api.whatsapp.com/message/QAZYM4GG2T7GP1?autoload=1&app_absent=0"
             target="_blank"
             >Fale com nosso vendedor</a
           >
         </li>
       </ul>
       <div id="social-links">
-        <a href="#" target="_blank">
+        <a
+          href="https://www.facebook.com/profile.php?id=100090115543439&locale=pt_BR"
+          target="_blank"
+        >
           <ion-icon name="logo-facebook"></ion-icon>
         </a>
 
@@ -57,7 +58,10 @@
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="#" target="_blank">
+        <a
+          href="https://api.whatsapp.com/message/QAZYM4GG2T7GP1?autoload=1&app_absent=0"
+          target="_blank"
+        >
           <ion-icon name="logo-whatsapp"></ion-icon>
         </a>
       </div>
